// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Different data provided to link elements results in different components Successfully renders Gatsby links 1`] = `
<a
  className="sc-ksdxgE czIvEG"
  href="https://www.ably.com/documentation/lorem"
>
  Lorem ipsum
</a>
`;

exports[`Different data provided to link elements results in different components Successfully renders normal links 1`] = `
<a
  className="sc-hBUSln hwcKRK"
  href="https://www.example.com"
>
  Lorem ipsum
</a>
`;
